# provable-email-game-engine

./: .gitignore  Cargo.toml  README.md  proof.json  todo.md
chess/host/: Cargo.toml
chess/host/src/: db.rs  engine.rs  main.rs
chess/methods/: Cargo.toml
chess/methods/guest/: Cargo.toml
chess/methods/guest/src/: main.rs
chess/zkemail/: package.json
chess/zkemail/circuits/: chess-fen-regex.circom  chess.circom  chess_fen_regex.json
chess/zkemail/email/: mate.eml
chess/zkemail/scripts/: generate-inputs.ts
referee/: Cargo.toml
referee/src/: hyle.rs  lib.rs  server.rs
