[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
hyle_contract = { git = "https://github.com/hyle-org/hyle-cosmos.git", branch = "main" }
methods = { path = "../methods" }
referee = { path = "../../referee"}
risc0-zkvm = { version = "1.0.5" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0.128"
hex = "0.4.3"
tokio = { version = "1.40.0", features = ["full"] }
async-imap = "0.10.1"
mailparse = "0.15.0"
regex = "1.10.6"
shakmaty = "0.27.2"
dirs = "5.0.1"
rust-gmail = "0.2.1"
lettre = "0.11.9"
urlencoding = "2.1.3"
