[package]
name = "chess_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
hyle_contract = { git = "https://github.com/hyle-org/hyle-cosmos.git", branch = "main" }
pgn-reader = "0.26.0"
risc0-zkvm = { version = "1.0.5", default-features = false, features = ['std'] }
shakmaty = "0.27.1"
